--- a/Assignments/WordSearch-cwf218/wordsearchgame/public/index.html
+++ b/Assignments/WordSearch-cwf218/wordsearchgame/public/index.html
@@ -26,6 +26,9 @@
             <table></table>
             <button id="submit">Submit</button>
         </div>  
+        <div id='leaderboard'>
+            <ol></ol>
+        </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
         <script src="js/scripts.js"></script>
