--- a/Assignments/WordSearch-cwf218/wordsearchgame/public/index.html
+++ b/Assignments/WordSearch-cwf218/wordsearchgame/public/index.html
@@ -22,13 +22,12 @@
             </form>
         </div>
         <div id="puzzlediv">
-            <label id="puzzlelabel"></label>
-            <table></table>
             <button id="submit">Submit</button>
+            <label id="puzzlelabel"></label>
+            <table id="puzzle"></table>
         </div>  
-        <div id='leaderboard'>
-            <ol></ol>
-        </div>
+        <label>Leaderboard</label>
+        <table id="leaderboard"></table>       
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
         <script src="js/scripts.js"></script>
